Fixed href and attempted to fix scrolling on ios

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,8 @@ html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    overflow-x: hidden
+    overflow-x: hidden;
+    /* scroll-behavior: smooth; */
 }
 
 body {
